homeaenavarremy_websiteastronavarre.github.iobridge/base/jekyll-deployment.yaml
#! jekyll-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: jekyll
    namespace: astronavarregithubio
    labels:
        com.docker.compose.project: astronavarregithubio
        com.docker.compose.service: jekyll
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: astronavarregithubio
            com.docker.compose.service: jekyll
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: astronavarregithubio
                com.docker.compose.service: jekyll
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: jekyll
                  image: amirpourmand/al-folio:latest
                  imagePullPolicy: IfNotPresent
                  args:
                    - /srv/jekyll/bin/entry_point.sh
                  ports:
                    - name: jekyll-35729
                      containerPort: 35729
                    - name: jekyll-8080
                      containerPort: 8080
                  volumeMounts:
                    - name: srv-jekyll
                      mountPath: /srv/jekyll
            volumes:
                - name: srv-jekyll
                  hostPath:
                    path: /home/aenavarre/my_website/astronavarre.github.io
